index: fix video player aspect on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -83,15 +83,12 @@ figure.intro {
   overflow: hidden;
   margin: auto;
   width: 75%;
-
-  @media screen and (max-width: 1066px) {
-    width: 800px;
-  }
+  max-width: 800px;
 
   border-radius: 20px;
 
-  // min-width: 50vw;
-  // min-height: 500px;
+  min-width: 50vw;
+  min-height: 500px;
 
   aspect-ratio: 16/9;
   box-sizing: border-box;
